现在26+作为一个独立分支处理，避免出现太大程度的混杂 简洁化脚本实现，之前的简直一坨（